src/read/snapshots/seeyou_cub__read__header__tests__parse_valid_be_header.snap
---
source: src/read/header.rs
expression: header
---
Header {
    title: "Test Header",
    allowed_serials: [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
    pc_byte_order: 0,
    is_secured: 0,
    crc32: 0,
    key: [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
    size_of_item: 43,
    size_of_point: 5,
    hdr_items: 0,
    max_pts: 100,
    left: 0.0,
    top: 1.0,
    right: 1.0,
    bottom: 0.0,
    max_width: 1.0,
    max_height: 1.0,
    lo_la_scale: 1.0,
    header_offset: 210,
    data_offset: 210,
    alignment: 0,
}
